--- a/portHouse/src/main/webapp/resources/css/style.css
+++ b/portHouse/src/main/webapp/resources/css/style.css
@@ -719,16 +719,33 @@ body.nav-on .menu_list li {
 	font-size: 0;
 }
 
-.tab_list li {
+.tab_list > li {
 	display: inline-block;
 	border: 1px solid #d1d1d1;
 	text-transform: uppercase;
-	padding: 13px;
-	cursor: pointer;
 	font-size: 0.875rem;
 	font-weight: 400;
 	color: #333;
 	margin-right: 10px;
+	position: relative;
+}
+
+.tab_list li .tab_low {
+	position: absolute;
+	width: 100%;
+	left: 0;
+	border: 1px solid #d1d1d1;
+	box-sizing: border-box;
+	display: none;
+}
+
+.tab_list > li:hover .tab_low {
+	display: block;
+}
+
+.tab_list li a {
+	display: block;
+	padding: 13px;
 }
 
 /*work list*/
@@ -742,7 +759,6 @@ body.nav-on .menu_list li {
 .work_list li {
 	float: left;
 	width: 33.3%;
-	height: 100%;
 	position: relative;
 	overflow: hidden;
 	z-index: 9;
