배포를 위한 소스 수정 - 경로 수정 context path

--- a/portHouse/src/main/webapp/resources/css/style.css
+++ b/portHouse/src/main/webapp/resources/css/style.css
@@ -751,6 +751,11 @@ body.nav-on .menu_list li {
 
 /*work list*/
 
+.work_list {
+	margin-left: -1.65%;
+	margin-right: -1.65%;
+}
+
 .work_list::after {
 	content: '';
 	display: block;
