--- a/portHouse/src/main/webapp/resources/css/style.css
+++ b/portHouse/src/main/webapp/resources/css/style.css
@@ -5,6 +5,7 @@ html, body {
 	font-family: 'Noto Sans KR', sans-serif;
 	color: #333;
 	height: 100%;
+	word-break: keep-all;
 }
 
 body {
@@ -169,7 +170,7 @@ img {
 
 #header .in_header {
 	width: 1742px;
-	height: 150px;
+	height: 100px;
 	margin: 0 auto;
 	position: relative;
 	-webkit-transition: .2s ease;
@@ -214,6 +215,107 @@ body.nav-on #header .in_header .logo {
 	}
 }
 
+/*mobile header*/
+#header .nav .nav-icon {
+	display:none;
+}
+
+#header .nav .nav-icon:after,
+#header .nav .nav-icon:before,
+#header .nav .nav-icon div {
+  background-color: #333;
+  -o-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  content: '';
+  display: block;
+  height: 3px;
+  margin: 6px 0;
+  -moz-transition: all .2s ease-in-out;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+#header .nav .nav-icon:before {
+	margin-top:0;
+}
+
+#header .nav .nav-icon:after {
+	margin-bottom:0;
+}
+
+#header .nav .nav-icon.active:before {
+  transform: translateY(8px) rotate(135deg);
+  -moz-transform: translateY(8px) rotate(135deg);
+  -webkit-transform: translateY(8px) rotate(135deg);
+  background-color: #fff;
+}
+
+#header .nav .nav-icon.active:after {
+  transform: translateY(-10px) rotate(-135deg);
+  -moz-transform: translateY(-10px) rotate(-135deg);
+  -webkit-transform: translateY(-10px) rotate(-135deg);
+  background-color: #fff;
+}
+
+#header .nav .nav-icon.active div {
+  -moz-transform: scale(0);
+  -webkit-transform: scale(0);
+  transform: scale(0);
+}
+
+@media (max-width: 1024px) {
+	#header .nav .nav-icon {
+		display:inline;
+		width: 30px;
+		cursor:pointer;
+		position:fixed;
+		right:10px;
+		z-index:100;
+		padding-top:25px;
+	}
+	#header .navbar {
+		position:fixed;
+		width:calc(70% - 30px);
+		height:100%;
+		right:-70%;
+		background:#333;
+		z-index:99;		
+		-webkit-transition: all 0.5s ease;
+		-moz-transition: all 0.5s ease;
+		-o-transition: all 0.5s ease;
+		-ms-transition: all 0.5s ease;
+		transition: all 0.5s ease;
+		margin:0;
+		padding: 100px 15px 0;
+	}
+	#header .navbar.active {
+		right:0;
+	}
+	#header .nav .navbar li a {
+		display:block;
+		color:#fff;
+		border-bottom:1px solid #eee;
+		position: relative;
+	}
+	#header .nav .navbar li {
+		display: block;
+		margin:0;
+		line-height:3em;
+	}
+	.in_header.active .sub-bg {
+		width: 100%;
+		height: calc(100%);
+		position: fixed;
+		left: 0;
+		top: 0;
+		background: rgba(20, 20, 20, 0.67);
+		z-index: 99;
+	}
+}
+
 /*footer*/
 
 #footer {
@@ -224,6 +326,7 @@ body.nav-on #header .in_header .logo {
 	width: 1400px;
 	margin: 0 auto;
 	padding: 27px 0;
+	text-align: center;
 }
 
 @media (max-width: 1400px) {
@@ -233,88 +336,20 @@ body.nav-on #header .in_header .logo {
 	}
 }
 
-#footer .in_footer p {
+#footer .in_footer {
 	font-size: 1rem;
 	font-weight: 400;
 	color: #fff;
-	text-transform: uppercase;
 }
 
-#footer .in_footer p span {
-	font-weight: 900;
+#footer .in_footer a,
+#footer .in_footer img {
+	vertical-align: middle;
 }
 
 /******************************
 	menu
 ******************************/
-
-/*menu button*/
-
-.menu-btn-toggle {
-	position: absolute;
-	right: 10px;
-	top: 50%;
-	transform: translateY(-50%);
-    width: 33px;
-	cursor: pointer;
-}
-
-.menu-btn-toggle span {
-    text-align: right;
-    display: block;
-    width: 100%;
-    height: 3px;
-    background-color: #000;
-    margin-left: auto;
-    margin-right: 0;
-    -webkit-transition: transform .3s, width .3s, background-color .8s .5s;
-    transition: transform .3s, width .3s, background-color .8s .5s;
-}
-
-@media (max-width: 420px) {
-	.menu-btn-toggle span {
-		height: 2px;
-	}
-}
-
-body.nav-on .menu-btn-toggle span {
-    background-color: #fff!important;
-    -webkit-transition: transform .3s, width .3s, background-color .5s;
-    transition: transform .3s, width .3s, background-color .5s;
-}
-
-.menu-btn-toggle .first-bar {
-    width: 25px;
-}
-
-.menu-btn-toggle:hover .first-bar {
-    width: 100%;
-}
-
-.menu-btn-toggle .second-bar {
-    width: 14px;
-    margin-top: 8px;
-    margin-bottom: 8px;
-}
-
-.menu-btn-toggle .third-bar {
-    margin-bottom: 0;
-}
-
-body.nav-on .menu-btn-toggle .first-bar {
-    width: 100%;
-    -webkit-transform: translateY(11px) rotateZ(135deg);
-    transform: translateY(11px) rotateZ(135deg);
-}
-
-body.nav-on .menu-btn-toggle .second-bar {
-    opacity: 0;
-}
-
-body.nav-on .menu-btn-toggle .third-bar {
-    -webkit-transform: translateY(-11px) rotateZ(-135deg);
-    transform: translateY(-11px) rotateZ(-135deg);
-}
 
 /*circle-bg*/
 
@@ -341,112 +376,18 @@ body.nav-on .fixed-bg-circle {
     transform: scale(50);
 }
 
-/*header nav-on*/
-
-body.nav-on #header {
-	height: 100%;
-	z-index: 999;
-}
-
-#header .inner {
-	visibility: hidden;
-	opacity: 0;
-	pointer-events: none;
-}
-
-body.nav-on #header .inner {
-	visibility: visible;
-	opacity: 1;
-	pointer-events: auto;
-}
-
 .menu_list {
-	position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-	width: 100%;
-	text-align: center;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	right: 0;
 }
 
 .menu_list li {
-    margin-bottom: 30px;
-    text-transform: uppercase;
-    opacity: 0;
-    -webkit-transform: translateY(-100px);
-    transform: translateY(-100px);
-}
-
-.menu_list li:first-child {
-	-webkit-transition: all 1.5s .6s cubic-bezier(0.165, 0.84, 0.44, 1);
-    transition: all 1.5s .6s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-.menu_list li:nth-child(2) {
-    -webkit-transition: all 1.5s .9s cubic-bezier(0.165, 0.84, 0.44, 1);
-    transition: all 1.5s .9s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-.menu_list li:nth-child(3) {
-    -webkit-transition: all 1.5s 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
-    transition: all 1.5s 1.2s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-.menu_list li:nth-child(4) {
-    -webkit-transition: all 1.5s 1.5s cubic-bezier(0.165, 0.84, 0.44, 1);
-    transition: all 1.5s 1.5s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-.menu_list li:nth-child(5) {
-    -webkit-transition: all 1.5s 1.8s cubic-bezier(0.165, 0.84, 0.44, 1);
-    transition: all 1.5s 1.8s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-.menu_list li a {
-	color: #fff;
-	position: relative;
-    padding: 0 12px;
-    font-size: 3.125rem;
-    font-weight: 900;
-	-webkit-transition: .3s ease;
-	transition: .3s ease;
-	text-transform: uppercase;
-}
-
-.menu_list li a:after {
-    content: '';
-    display: block;
-    position: absolute;
-    z-index: -1;
-    left: 0;
-    bottom: 12px;
-    width: 100%;
-    height: 2vh;
-    background-color: #46d0d0;
-    -webkit-transition: transform .5s;
-    transition: transform .5s;
-    transform-origin: 0;
-    -webkit-transform: scaleX(0);
-    transform: scaleX(0);
-}
-
-.menu_list:hover li a {
-    color: rgba(255, 255, 255, 0.1);
-}
-
-.menu_list li a:hover {
-    color: #fff;
-}
-
-.menu_list li a:hover:after {
-    -webkit-transform: scaleX(1);
-    transform: scaleX(1);
-}
-
-body.nav-on .menu_list li {
-	opacity: 1;
-	-webkit-transform: translateY(0);
-    transform: translateY(0);
+	display: inline-block;
+    margin-left: 30px;
+    font-size: 1rem;
+    font-weight: 500;
 }
 
 /******************************
@@ -507,37 +448,6 @@ body.nav-on .menu_list li {
     100% {
         transform: rotate(360deg);
     }
-}
-
-/*sns icon*/
-
-.sns_icon {
-	position: fixed;
-	left: 89px;
-	top: 50%;
-	transform: translateY(-50%);
-	z-index: 1;
-}
-
-.sns_icon a {
-	display: block;
-	margin: 10px 0;
-}
-
-@media screen and (max-width: 1700px) {
-	.sns_icon.pc_ver {
-		display: none;
-	}
-	.sns_icon.m_ver {
-		display: inline-block;
-		position: unset;
-		transform: none;
-		margin-right: 20px;
-	}
-	.sns_icon a {
-		display: inline-block;
-		margin-left: 10px;
-	}
 }
 
 /*center line*/
@@ -789,39 +699,6 @@ body.nav-on .menu_list li {
 	right: 20px;
 }
 
-.self_text {
-	font-size: 1rem;
-	font-weight: 400;
-	color: #555;
-	text-transform: uppercase;
-	position: absolute;
-	right: 0;
-	bottom: 135px;
-}
-
-.self_text span {
-	font-weight: 900;
-}
-
-@media (max-width: 1400px) {
-	.self_text {
-		right: 10px;
-	}
-}
-
-@media (max-width: 1024px) {
-	.self_text {
-		position: unset;
-		margin-top: 70px;
-	}
-}
-
-@media (max-width: 420px) {
-	.self_text {
-		margin-top: 30px;
-	}
-}
-
 /******************************
 	work
 ******************************/
@@ -881,12 +758,24 @@ body.nav-on .menu_list li {
 	color: #333;
 }
 
+@media (max-width: 420px) {
+	.sub_container .sub_title h2 {
+		font-size: 2.062rem;
+	}
+}
+
 .sub_container .sub_title .dot {
 	width: 17px;
 	height: 17px;
 	background-color: #333;
 	border-radius: 50%;
 	margin: 27px auto 0; 
+}
+
+@media (max-width: 420px) {
+	.sub_container .sub_title .dot {
+		display: none;
+	}
 }
 
 /*tab*/
@@ -925,6 +814,8 @@ body.nav-on .menu_list li {
 .tab_list li a {
 	display: block;
 	padding: 13px;
+	min-width: 53px;
+	box-sizing: border-box;
 }
 
 /*work list*/
@@ -965,7 +856,7 @@ body.nav-on .menu_list li {
 
 @media (max-width: 1200px) {
 	.work_list li {
-		width: calc(100% - 20px);
+		width: calc(50% - 20px);
 		margin-left: 10px;
 		margin-right: 10px;
 		margin-bottom: 20px;
@@ -982,6 +873,12 @@ body.nav-on .menu_list li {
 	opacity: 0.77;
 	transition: .2s ease all;
     -webkit-transition: .2s ease all;
+}
+
+@media (max-width: 420px) {
+	.work_list li .list_hover {
+		bottom: 0;
+	}
 }
 
 .work_list li:hover .list_hover {
@@ -1001,6 +898,12 @@ body.nav-on .menu_list li {
 	color: #fff;
 }
 
+@media (max-width: 420px) {
+	.work_list .text_box {
+		padding: 0 10px;
+	}
+}
+
 .list_hover .category {
 	font-size: 0.6875rem;
 	font-weight: 300;
@@ -1012,9 +915,21 @@ body.nav-on .menu_list li {
 	font-weight: 700;
 }
 
+@media (max-width: 420px) {
+	.list_hover .title {
+		font-size: 1rem;
+	}
+}
+
 .list_hover .text {
 	font-size: 0.875rem;
 	font-weight: 300;
+}
+
+@media (max-width: 420px) {
+	.list_hover .text {
+		display: none;
+	}
 }
 
 /*pagination*/
@@ -1082,6 +997,12 @@ body.nav-on .menu_list li {
 	font-size: 3.125rem;
 	font-weight: 900;
 	color: #333;
+}
+
+@media (max-width: 1000px) {
+	.detail .title_box h2 {
+		font-size: 1.875rem;
+	}
 }
 
 .detail .title_box .content {
@@ -1165,6 +1086,23 @@ body.nav-on .menu_list li {
 	background-color: #a70000;
 }
 
+.register_btn {
+	text-align: right;
+	margin-bottom: 10px;
+}
+
+.register_btn a {
+	display: inline-block;
+	width: 150px;
+	padding: 10px 0;
+	font-size: 1rem;
+	font-weight: 400;
+	color: #fff;
+	text-align: center;
+	cursor: pointer;
+	background-color: #53c5c5;
+}
+
 
 /******************************
 	about
@@ -1188,6 +1126,12 @@ body.nav-on .menu_list li {
 	font-weight: 400;
 	color: #333;
 	margin-bottom: 45px;
+}
+
+@media (max-width: 420px) {
+	.about .content {
+		font-size: 1rem;
+	}
 }
 
 .about .content span {
@@ -1245,6 +1189,12 @@ body.nav-on .menu_list li {
 	font-size: 1.625rem;
 	font-weight: 100;
 	color: #fff;
+}
+
+@media (max-width: 420px) {
+	.about .about_box .title {
+		font-size: 1.25rem;
+	}
 }
 
 .about .about_box .title span {
@@ -1515,18 +1465,21 @@ body.nav-on .menu_list li {
 	게시물 목록
 ******************************/
 
-.admin_list {
-	border-top: 2px solid #333;
+.admin {
 	width: 1200px;
 	margin: 0 auto;
 }
 
 @media (max-width: 1200px) {
-	.admin_list {
+	.admin {
 		width: calc(100% - 20px);
 		margin-left: 10px;
 		margin-right: 10px;
 	}
+}
+
+.admin_list {
+	border-top: 2px solid #333;
 }
 
 .admin_list .num {
