--- a/portHouse/src/main/webapp/resources/css/style.css
+++ b/portHouse/src/main/webapp/resources/css/style.css
@@ -850,29 +850,34 @@ body.nav-on .fixed-bg-circle {
 	}
 }
 
-
 .work_list {
-	margin-left: -1.65%;
-	margin-right: -1.65%;
+	margin-left: -20px;
+	margin-right: -20px;
+	font-size: 0;
 }
 
-.work_list::after {
+/* .work_list::after {
 	content: '';
 	display: block;
 	clear: both;
-}
+} */
 
 .work_list li {
-	float: left;
-	width: 30%;
-	margin-left: calc( 1.65% );
-    margin-right: calc( 1.65% );
+	/* float: left; */
+	display: inline-block;
+	width: calc(33.3% - 40px);
+	margin-left: 20px;
+	margin-right: 20px;
     margin-bottom: 27px;
 	position: relative;
 	overflow: hidden;
 }
 
 @media (max-width: 1200px) {
+	.work_list {
+		margin-left: -10px;
+		margin-right: -10px;
+	}
 	.work_list li {
 		width: calc(50% - 20px);
 		margin-left: 10px;
